--- a/boomi-iot-showcase-v1/docker-compose.yml
+++ b/boomi-iot-showcase-v1/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms1G -Xmx1G"
       - cluster.routing.allocation.disk.threshold_enabled=false
     ulimits:
       memlock:
