DO NOT USE., although fully validated

--- a/boomi-iot-showcase-v1/docker-compose.yml
+++ b/boomi-iot-showcase-v1/docker-compose.yml
@@ -232,3 +232,6 @@ services:
       - "32003:8080"
     links:
       - gpsinventory
+
+# NOTE: This version uses confluent kafka's elasticsearch connector and no use of nginx reverse proxy
+# It has been fully validated and the documentation is up-to-date
