--- a/boomi-iot-showcase-v2/nginx-reverse-proxy/nginx.conf
+++ b/boomi-iot-showcase-v2/nginx-reverse-proxy/nginx.conf
@@ -9,11 +9,11 @@ http {
     server {
         listen 8080;
 
-        location /gpsinventory-api {
+        location /gpsinventory {
             proxy_pass         http://gpsinventory-api:8080/api/v1/gpsinventory;
         }
         location /elasticsearch {
-            proxy_pass         http://elasticsearch:9200;
+            proxy_pass         http://elasticsearch:9200/gps/_doc;
         }
     }
 }
